<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.yidnek.amguesthouse.AddRecordActivity">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_record"
        android:textSize="40sp"
        android:layout_marginTop="90dp"
        android:textColor="@color/white"
        android:fontFamily="@font/nyala"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="150dp">

    <EditText
        android:id="@+id/room_number"
        android:inputType="number"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/room_number"
        android:textColorHint="@color/grey"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_home_white"
        android:fontFamily="@font/nyala"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tempo_room"
                android:inputType="number"
                android:textSize="20sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/tempo_room"
                android:textColorHint="@color/grey"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_av_timer_white"
                android:fontFamily="@font/nyala"/>

            <EditText
                android:id="@+id/normal_room"
                android:inputType="number"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:ems="10"
                android:textSize="20sp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/night_room"
                android:textColorHint="@color/grey"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_access_time_white"
                android:fontFamily="@font/nyala"/>

        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:inputType="text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:ems="10"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/name"
            android:textColorHint="@color/grey"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_account_box_white"
            android:fontFamily="@font/nyala"/>

        <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bakground"
            android:textSize="18dp"
            android:fontFamily="@font/nyala"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressbar1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
