<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.yidnek.amguesthouse.HomeActivity">



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_marginTop="50dp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:src="@drawable/picture4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_type_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_account_circle_white_2x" />
                <TextView
                    android:id="@+id/user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/nyala"/>
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:layout_marginRight="6dp"
                    android:fontFamily="@font/nyala"/>

            </LinearLayout>

        </LinearLayout>

    <Button
        android:id="@+id/add_record"
        android:text="@string/add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>

    <Button
        android:id="@+id/liquors"
        android:text="@string/liquors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>
    <Button
        android:id="@+id/wechi"
        android:text="@string/wechi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>

    <Button
        android:id="@+id/today_records"
        android:text="@string/today_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>

    <Button
        android:id="@+id/history"
        android:text="@string/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>
    <Button
        android:id="@+id/add_user"
        android:text="@string/add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/btn_bakground"
        android:textSize="18dp"
        android:fontFamily="@font/nyala"/>

    </LinearLayout>

</ScrollView>
