<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="15dp"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="55dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/roomNo"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/room_number"
                    android:layout_width="165dp"
                    android:layout_height="30dp"
                    android:background="@color/teal"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nyala"/>
                <TextView
                    android:id="@+id/r_date"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/date"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/teal"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nyala"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingLeft="5dp"
                    android:id="@+id/rShort"
                    android:text="@string/tempo_room"
                    android:layout_width="165dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/nyala"/>
                <TextView
                    android:id="@+id/rNight"
                    android:text="@string/night_room"
                    android:layout_width="160dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/nyala"/>
            </LinearLayout>

            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/rName"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/nyala"/>
            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/rUser"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/nyala"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/today_delete"
                android:layout_gravity="center"
                android:background="@drawable/btn_update_delete"
                android:text="Delete"
                android:layout_width="145dp"
                android:layout_height="30dp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>