<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="28dp"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:id="@+id/try3"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="55dp"
        app:cardCornerRadius="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/w_type"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:text="@string/item_type"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/teal"
                android:textColor="@color/black"
                android:fontFamily="@font/nyala"/>
            <TextView
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:text="25 birr"
                android:id="@+id/w_amount"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/nyala"/>
            <TextView
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:text="@string/name"
                android:id="@+id/w_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/nyala"/>
            <TextView
                android:paddingLeft="5dp"
                android:layout_gravity="center"
                android:text="@string/date"
                android:id="@+id/w_date"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/nyala"/>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <Button
                    android:textColor="@color/white"
                    android:id="@+id/w_update"
                    android:background="@drawable/btn_update_delete"
                    android:text="UPDATE"
                    android:layout_width="145dp"
                    android:layout_height="30dp" />
                <Button
                    android:textColor="@color/white"
                    android:id="@+id/w_delete"
                    android:background="@drawable/btn_update_delete"
                    android:text="Delete"
                    android:layout_marginLeft="10dp"
                    android:layout_width="145dp"
                    android:layout_height="30dp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>